--- a/views/features.html
+++ b/views/features.html
@@ -1,5 +1,10 @@
-<div class="content">
-    <h1>{{product.headline}}</h1>
+<div class="content features">
+  <div class="row">
+    <div class="col-sm hero">
+      <div class="product-name">{{product.name}}</div>
+      <div class="product-headline">{{product.headline}}</div>
+    </div>
+  </div>
 </div>
 
 <footer class="footer">
