--- a/style.less
+++ b/style.less
@@ -1,64 +1,112 @@
 html,
 body {
-	height: 100%;
-	padding: 0;
-	margin: 0;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
-.flex {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
 
-	.content {
-		flex: 1 0 auto;
-	}
-	.footer {
-		flex-shrink: 0;
-		width: 100%;
-		ul {
-			border-top: 1px solid #ccc;
-			border-width: 1px 0;
-			list-style: none;
-			margin: 0;
-			padding: 0;
-			text-align: center;
-			display: flex;
-			align-content: stretch;
-			justify-content: center;
-			li {
-				flex: 1 0 auto;
-				background-color: #F2F2F2;
-				&.active {
-					a {
-						color: #007bff;
-					}
-				}
-				a {
-					display:inline-block;
-    				padding: 15px;
-    				color: grey;
-				}
-			}
-		}
-	}
+.product-view {
+    height: 100%;
+
+    .content {
+        padding-bottom: 90px;
+    }
+}
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+
+    ul {
+        border-top: 1px solid #ccc;
+        border-width: 1px 0;
+        list-style: none;
+        height: 80px;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+        display: flex;
+        align-content: stretch;
+        justify-content: center;
+
+        li {
+            flex: 1 0 auto;
+            background-color: #F2F2F2;
+
+            &.active {
+                a {
+                    color: #007bff;
+                }
+            }
+
+            a {
+                text-decoration: none;
+                display: inline-block;
+                padding: 15px;
+                color: grey;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+}
+
+.features {
+  .hero {
+    text-align: center;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    .product-name {
+        font-size: 28px;
+        line-height: 1.14286;
+        font-weight: 600;
+        letter-spacing: .007em;
+        font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+        text-align: center;
+    }
+
+    .product-headline {
+        font-size: 64px;
+        line-height: 1.0625;
+        font-weight: 600;
+        letter-spacing: -.009em;
+        font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+        text-align: center;
+    }
+  }
 }
 
 .comparison {
-	.sticky-header {
-		position: sticky;
-	}
-	.feature-row {
-		margin: 0;
-	    padding: 55px 0;
-	    border-top: 1px solid #d6d6d6;
-		.feature-title {
-			font-size: 24px;
-		    line-height: 1.16667;
-		    font-weight: 600;
-		    letter-spacing: .009em;
-		    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
-		    position: relative;
-		    margin-top: -.17647em;
-		}
-	}
+    .sticky-header {
+        position: fixed;
+        width: 100%;
+        background-color: rgba(255, 255, 255, 0.7);
+        z-index: 10;
+        padding: 0 20px;
+    }
+
+    .features {
+        padding-top: 50px;
+
+        .feature-row {
+            margin: 0;
+            padding: 55px 0;
+            border-top: 1px solid #d6d6d6;
+
+            .feature-title {
+                font-size: 24px;
+                line-height: 1.16667;
+                font-weight: 600;
+                letter-spacing: .009em;
+                font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+                position: relative;
+                margin-top: -.17647em;
+            }
+
+            .feature-value {
+                font-size: 17px;
+            }
+        }
+    }
 }
