more products and words

--- a/style.less
+++ b/style.less
@@ -52,6 +52,20 @@ body {
     }
 }
 
+.main {
+  .hero-image {
+    margin-top: -120px;
+  }
+  .featured-image {
+    max-width: 80%;
+    vertical-align: center;
+    max-height: 200px;
+  }
+  .bg-dark {
+    background-color: black !important;
+  }
+}
+
 .features {
   .hero {
     text-align: center;
@@ -64,6 +78,7 @@ body {
         letter-spacing: .007em;
         font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
         text-align: center;
+        padding-bottom: 20px;
     }
 
     .product-headline {
@@ -73,6 +88,14 @@ body {
         letter-spacing: -.009em;
         font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
         text-align: center;
+    }
+
+    .product-description {
+          font-size: 24px;
+    line-height: 1.33349;
+    font-weight: 400;
+    letter-spacing: .009em;
+    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
     }
   }
 }
