--- a/views/features.html
+++ b/views/features.html
@@ -3,6 +3,8 @@
     <div class="col-sm hero">
       <div class="product-name">{{product.name}}</div>
       <div class="product-headline">{{product.headline}}</div>
+      <img class="hero-image" ng-src="{{product.imageUrl}}">
+      <div class="product-description">{{product.description}}</div>
     </div>
   </div>
 </div>
