--- a/views/main.html
+++ b/views/main.html
@@ -1,47 +1,36 @@
-<div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
-  <div class="col-md-5 p-lg-5 mx-auto my-5">
-    <h1 class="display-4 font-weight-normal">Cookie</h1>
-    <p class="lead font-weight-normal">Cookie Cookie Cookie Cookie Cookie Cookie</p>
-    <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
+<div class="main">
+  <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
+    <div class="col-md-5 p-lg-5 mx-auto my-5">
+      <h1 class="display-4 font-weight-normal">{{products.cookie.headline}}</h1>
+      <p class="lead font-weight-normal">{{products.cookie.name}}</p>
+      <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
+    </div>
+    <img class="hero-image" ng-src="{{products.cookie.imageUrl}}">
   </div>
-  <div class="product-device box-shadow d-none d-md-block"></div>
-  <div class="product-device product-device-2 box-shadow d-none d-md-block"></div>
-</div>
 
-<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-    <div class="my-3 py-3">
-      <h2 class="display-5">Another headline</h2>
-      <p class="lead">And an even wittier subheading.</p>
-      <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
+  <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden text-white">
+      <div class="my-3 p-3">
+        <h2 class="display-5">{{products.vodka.headline}}</h2>
+        <p class="lead">{{products.vodka.name}}</p>
+        <a class="btn btn-outline-secondary" href="features/vodka">Learn more</a>
+      </div>
+      <img class="featured-image" ng-src="{{products.vodka.imageUrl}}">
     </div>
-    <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-  </div>
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-    <div class="my-3 p-3">
-      <h2 class="display-5">Another headline</h2>
-      <p class="lead">And an even wittier subheading.</p>
-      <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
+    <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
+      <div class="my-3 py-3">
+        <h2 class="display-5">{{products.cookieDark.headline}}</h2>
+        <p class="lead">{{products.cookieDark.name}}</p>
+        <a class="btn btn-outline-secondary" href="features/cookieDark">Learn more</a>
+      </div>
+      <img class="featured-image" ng-src="{{products.cookieDark.imageUrl}}">
     </div>
-    <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-  </div>
-</div>
-
-<div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
-  <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
-    <div class="my-3 p-3">
-      <h2 class="display-5">Another headline</h2>
-      <p class="lead">And an even wittier subheading.</p>
-      <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
+    <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden text-white">
+      <div class="my-3 p-3">
+        <h2 class="display-5">{{products.fireball.headline}}</h2>
+        <p class="lead">{{products.fireball.name}}</p>
+        <a class="btn btn-outline-secondary" href="features/fireball">Learn more</a>
+      </div>
+      <img class="featured-image" ng-src="{{products.fireball.imageUrl}}">
     </div>
-    <div class="bg-dark box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
   </div>
-  <div class="bg-dark mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
-    <div class="my-3 py-3">
-      <h2 class="display-5">Another headline</h2>
-      <p class="lead">And an even wittier subheading.</p>
-      <a class="btn btn-outline-secondary" href="features/cookie">Learn more</a>
-    </div>
-    <div class="bg-light box-shadow mx-auto" style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div>
-  </div>
-</div>
