--- a/style.less
+++ b/style.less
@@ -129,6 +129,10 @@ body {
 
             .feature-value {
                 font-size: 17px;
+                img {
+                  max-width: 100%;
+                  max-height: 200px;
+                }
             }
         }
     }
