wording and images

--- a/views/comparison.html
+++ b/views/comparison.html
@@ -2,7 +2,7 @@
     <div class="sticky-header">
         <h1>{{product.name}}</h1>
     </div>
-    <div class="features">
+    <div class="features container">
         <div class="feature-row row">
             <div class="feature-title col-sm">
 
@@ -36,8 +36,8 @@
         <li>
             <a ng-href="support/{{productId}}">Support</a>
         </li>
-        <li>
+<!--         <li>
             <a ng-href="specialist/{{productId}}">Specialist</a>
-        </li>
+        </li> -->
     </ul>
 </footer>
