--- a/views/features.html
+++ b/views/features.html
@@ -1,4 +1,4 @@
-<div class="content features">
+<div class="content features container">
   <div class="row">
     <div class="col-sm hero">
       <div class="product-name">{{product.name}}</div>
@@ -23,8 +23,8 @@
         <li>
             <a ng-href="support/{{productId}}">Support</a>
         </li>
-        <li>
+<!--         <li>
             <a ng-href="specialist/{{productId}}">Specialist</a>
-        </li>
+        </li> -->
     </ul>
 </footer>
