--- a/views/specialist.html
+++ b/views/specialist.html
@@ -17,8 +17,8 @@
             <li>
                 <a ng-href="support/{{productId}}">Support</a>
             </li>
-            <li class="active">
+<!--             <li class="active">
                 <a ng-href="specialist/{{productId}}">Specialist</a>
-            </li>
+            </li> -->
         </ul>
     </footer>
