--- a/style.less
+++ b/style.less
@@ -54,7 +54,7 @@ body {
 
 .main {
   .hero-image {
-    margin-top: -120px;
+    margin-top: -50px;
   }
   .featured-image {
     max-width: 80%;
@@ -89,13 +89,17 @@ body {
         font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
         text-align: center;
     }
-
+    .hero-image {
+    	padding-top: 50px;
+    }
     .product-description {
           font-size: 24px;
-    line-height: 1.33349;
-    font-weight: 400;
-    letter-spacing: .009em;
-    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+	    line-height: 1.33349;
+	    font-weight: 400;
+	    letter-spacing: .009em;
+	    font-family: "SF Pro Display","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+	    padding: 20px 180px;
+	    text-align: center;
     }
   }
 }
@@ -129,6 +133,7 @@ body {
 
             .feature-value {
                 font-size: 17px;
+                line-height: 30px;
                 img {
                   max-width: 100%;
                   max-height: 200px;
@@ -136,4 +141,14 @@ body {
             }
         }
     }
+}
+
+.support {
+	text-align: center;
+	h1 {
+		padding-top: 50px;
+	}
+	p {
+		font-size: 23px;
+	}
 }
