--- a/views/support.html
+++ b/views/support.html
@@ -1,6 +1,8 @@
-    <div class="content">
-        <h1>Support~</h1>
-        <p>{{product}}</p>
+    <div class="content support">
+        <h1>Welcome to Apple Support</h1>
+        <p>We're here to help</p>
+        <img class="support-img" src="/images/support.png">
+        <p>Have questions about your {{product.name}}? Make a Genius Bar reservation</p>
     </div>
 
     <footer class="footer">
@@ -17,8 +19,8 @@
             <li class="active">
                 <a ng-href="support/{{productId}}">Support</a>
             </li>
-            <li>
+<!--             <li>
                 <a ng-href="specialist/{{productId}}">Specialist</a>
-            </li>
+            </li> -->
         </ul>
     </footer>
